# orgmd_parser

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-alpine  Makefile.toml  README.md  docker-compose.yml  entrypoint.sh  markdown.bnf  process_structure.md
benches/: my_benchmark.rs
examples/: nom_permutation.rs
native/: Cargo.toml
native/src/: main.rs
parser/: Cargo.toml
parser/benches/: my_benchmark.rs
parser/src/: ast.rs  lib.rs  md_parser.rs
src/: main.rs  wasm_lib.rs
src/module/: ast.rs  md_parser.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
