[package]
name = "orgmd_parser"
version = "0.1.0"
authors = ["okeysea <okeysea000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/wasm_lib.rs"

[[bin]]
name = "native"
path = "src/main.rs"

[dependencies]
rand = "0.3.14"
nom = "6.0.0"
wasm-bindgen = "0.2"
serde = "1.0"
