[package]
name = "orgmd_parser"
version = "0.1.0"
authors = ["okeysea <okeysea000@gmail.com>"]
edition = "2018"
repository = "https://github.com/okeysea/orgmd_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[lib]
#crate-type = ["cdylib"]
#path = "src/wasm_lib.rs"

[[bin]]
name = "native"
path = "src/main.rs"

[dependencies]
rand = "0.3.14"
nom = "6.0.0"
wasm-bindgen = "0.2"

# https://serde.rs/feature-flags.html
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "my_benchmark"
harness = false

# wasm-opt: Exported global cannot be mutable · Issue #886 · rustwasm/wasm-pack · GitHub
# https://github.com/rustwasm/wasm-pack/issues/886
# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
