[package]
name = "native"
version = "0.1.0"
authors = ["okeysea <okeysea000@gmail.com>"]
edition = "2018"
repository = "https://github.com/okeysea/orgmd_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
serde_json = "1.0"
