[package]
name = "parser"
version = "0.1.0"
authors = ["okeysea <okeysea000@gmail.com>"]
edition = "2018"
repository = "https://github.com/okeysea/orgmd_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
nom = "6.0.0"

# https://serde.rs/feature-flags.html
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3.4"
