[package]
name = "wasm"
version = "0.1.0"
authors = ["okeysea <okeysea000@gmail.com>"]
edition = "2018"
repository = "https://github.com/okeysea/orgmd_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
parser = { path = "../parser" }
serde_json = "1.0"
wasm-bindgen = "0.2"

# wasm-opt: Exported global cannot be mutable · Issue #886 · rustwasm/wasm-pack · GitHub
# https://github.com/rustwasm/wasm-pack/issues/886
# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
